--- a/hellogit2.html
+++ b/hellogit2.html
@@ -6,6 +6,6 @@
     <title>Hello Git2!</title>
 </head>
 <body>
-    <h1>Hello Git2!</h1>
+    <h1>Hello Git2! try to edit directly from server</h1>
 </body>
 </html>
