--- a/hellogit2.html
+++ b/hellogit2.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Hello Git2! try to edit directly from server</h1>
+    <div>
+        This is a new line added to hellogit2.html
+    </div>
 </body>
 </html>
